--- a/css/shame.css
+++ b/css/shame.css
@@ -11,3 +11,18 @@
 .admin-bar aside.openMenu {
 	top: 46px;
 }
+
+.acf-map {
+	width: 100%;
+	height: 400px;
+	border: #ccc solid 1px;
+	margin: 20px 0;
+}
+
+/* fixes potential theme css conflict */
+.acf-map img {
+	max-width: inherit !important;
+}
+.rectangle-thumbnails .img {
+	padding-bottom: 0;
+}
